New in v0.12.2 (2003/08/??)
---------------------------

Patch by Arkadiusz Patyk fixes building with Python 2.3c1.


New in v0.12.1 (2003/07/22)
---------------------------

Added --no-change-dir-inc-perms switch, to avoid some weird errors on
FreeBSD, and possibly on Solaris.  Thanks to Troels Arvin for
report.

Fixed bug when regressing destination directory made with
--windows-mode.  Reported by Tucker Sylvestro.

The librsync blocksize is now chosen based on filesize.  This should
make operations on large files faster (in some cases, orders of
magnitude faster).  Thanks to Ty! Boyack for bringing this issue to my
attention.


New in v0.12.0 (2003/06/26)
---------------------------

Fixed (?) bug that caused crash when file changes type from regular
file in middle of download (reported by Ty! Boyack).

Failure to construct regular file in regression/restoration only
causes warning, not fatal error.

Removed --exclude-mirror option.  (Probably no one uses this, and it
adds clutter.)

--include and --exclude options should work now with restores, with
some speed penalty.


New in v0.11.5 (2003/06/20)
---------------------------

Added EDEADLOCK to the list of skippable errors.  (Thanks to Dave
Kempe for report.)

Added --list-at-time option at request of Farkas Levente.

Various fixes for backing up onto windows directories.  Thanks to
Keith Edmunds for bug reports and testing.

Fixed possible crash when a file would be deleted while being
processed (reported by Robert Weber).

Handle better cases when there are two files with the same name in the
same directory.

Added --windows-restore switch, for use when when restoring from a
windows-style file system to a normal one.  Use --windows-mode when
backing up.

Scott Bender's patch fixes backing up hard links when first linked
file is quoted.


New in v0.11.4 (2003/03/15)
---------------------------

Fixed bug incrementing sockets whose filenames were pretty long, but
not super long.  Reported by Olivier Mueller.
